--- a/Proyecto-Progra-main/Proyecto/nbproject/private/private.properties
+++ b/Proyecto-Progra-main/Proyecto/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Ryzen\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\jdmat\\AppData\\Roaming\\NetBeans\\13\\build.properties
